# swagger/swagger_output.json
@@ -29,7 +29,7 @@
     "/api/profissionais/": {
       "get": {
         "tags": [],
-        "description": "",
+        "description": "Gerar lista com todos os profissionais cadastrados, encontrar também por palavras chaves pelos campos : profissao, área de atuação e nome. ",
         "parameters": [
           {
             "name": "profissao",
@@ -55,8 +55,36 @@
       },
       "post": {
         "tags": [],
-        "description": "",
-        "parameters": [],
+        "description": "Cadastrar profissionais voluntários, insira os dados nos campos abaixo:",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "example": "Lucca Sebastião"
+                },
+                "contato": {
+                  "example": "8888-7777"
+                },
+                "email": {
+                  "example": "lucca@teste.com"
+                },
+                "profissao": {
+                  "example": "professor"
+                },
+                "area": {
+                  "example": "educação"
+                },
+                "informacoes": {
+                  "example": "Dá Aulas para turmas de Ensino Médio"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -67,32 +95,10 @@
         }
       }
     },
-    "/api/profissionais/buscar/{id}": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
     "/api/profissionais/profissao": {
       "get": {
         "tags": [],
-        "description": "",
+        "description": "Gerar lista apenas das profissões cadastradas",
         "parameters": [],
         "responses": {
           "200": {
@@ -104,7 +110,7 @@
     "/api/profissionais/area": {
       "get": {
         "tags": [],
-        "description": "",
+        "description": "Gerar lista apenas das áreas de atuação cadastradas",
         "parameters": [],
         "responses": {
           "200": {
@@ -116,7 +122,7 @@
     "/api/profissionais/nomes": {
       "get": {
         "tags": [],
-        "description": "",
+        "description": "Gerar lista apenas dos nomes cadastrados",
         "parameters": [],
         "responses": {
           "200": {
@@ -128,13 +134,40 @@
     "/api/profissionais/{nome}": {
       "put": {
         "tags": [],
-        "description": "",
+        "description": "Atualizar cadastro de profissionais voluntários já cadastrados, por favor insira o nome que deseja alterar",
         "parameters": [
           {
             "name": "nome",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "example": "Lucca Sebastião Figueira"
+                },
+                "contato": {
+                  "example": "8888-7777"
+                },
+                "email": {
+                  "example": "lucca@teste.com"
+                },
+                "profissao": {
+                  "example": "professor"
+                },
+                "area": {
+                  "example": "educação"
+                },
+                "informacoes": {
+                  "example": "Dá Aulas para turmas de Ensino Médio e Cursinho"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -148,7 +181,7 @@
       },
       "delete": {
         "tags": [],
-        "description": "",
+        "description": "Remover cadastro de profissionais voluntários, por favor insira o nome do cadastro que deseja excluir",
         "parameters": [
           {
             "name": "nome",
@@ -170,7 +203,7 @@
     "/api/participantes/": {
       "get": {
         "tags": [],
-        "description": "",
+        "description": "Gerar lista com todos os participantes cadastrados, encontrar também por palavras chaves pelos campos : idade, escolaridade e genero. ",
         "parameters": [
           {
             "name": "idade",
@@ -179,16 +212,6 @@
           },
           {
             "name": "escolaridade",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "informacoesNecessarias",
-            "in": "query",
-            "type": "string"
-          },
-          {
-            "name": "itensNecessarios",
             "in": "query",
             "type": "string"
           },
@@ -206,8 +229,49 @@
       },
       "post": {
         "tags": [],
-        "description": "",
-        "parameters": [],
+        "description": "Cadastrar participantes, insira os dados nos campos abaixo:",
+        "parameters": [
+          
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "example": "Carla Martins"
+                },
+                "dataNascimento": {
+                  "example": "13/09/2013"
+                },
+                "idade": {
+                  "example": "21"
+                },
+                "genero": {
+                  "example": "Feminino"
+                },
+                "escolaridade": {
+                  "example": "Fundamental"
+                },
+                "contato": {
+                  "example": "9999-9999"
+                },
+                "dataDeEntrada": {
+                  "example": "Fundamental"
+                },
+                "informacoesNecessarias": {
+                  "example": "Precisando de cuidados terapeuticos, psicológicos e fisícos"
+                },
+                "itensNecessarios": {
+                  "example": "Remedios e Perucas"
+                },
+                "informacoesAdicionais": {
+                  "example": "Roupas"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created"
@@ -221,7 +285,7 @@
     "/api/participantes/idade": {
       "get": {
         "tags": [],
-        "description": "",
+        "description": "Gerar lista apenas das idades cadastradas",
         "parameters": [],
         "responses": {
           "200": {
@@ -233,7 +297,7 @@
     "/api/participantes/escolaridade": {
       "get": {
         "tags": [],
-        "description": "",
+        "description": "Gerar lista apenas das escolaridades",
         "parameters": [],
         "responses": {
           "200": {
@@ -245,19 +309,7 @@
     "/api/participantes/informacoes": {
       "get": {
         "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/participantes/itens": {
-      "get": {
-        "tags": [],
-        "description": "",
+        "description": "Gerar lista apenas das informações",
         "parameters": [],
         "responses": {
           "200": {
@@ -269,7 +321,7 @@
     "/api/participantes/genero": {
       "get": {
         "tags": [],
-        "description": "",
+        "description": "Gerar lista apenas dos generos cadastrados",
         "parameters": [],
         "responses": {
           "200": {
@@ -281,13 +333,52 @@
     "/api/participantes/{nome}": {
       "put": {
         "tags": [],
-        "description": "",
-        "parameters": [
+        "description": "Atualizar cadastro de participantes, por favor insira o nome que deseja alterar.",
+        "parameters":[
           {
             "name": "nome",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "example": "Carla Martins Caxias"
+                },
+                "dataNascimento": {
+                  "example": "13/09/2013"
+                },
+                "idade": {
+                  "example": "21"
+                },
+                "genero": {
+                  "example": "Feminino"
+                },
+                "escolaridade": {
+                  "example": "Fundamental"
+                },
+                "contato": {
+                  "example": "9999-9999"
+                },
+                "dataDeEntrada": {
+                  "example": "Fundamental"
+                },
+                "informacoesNecessarias": {
+                  "example": "Precisando de cuidados terapeuticos, baixa autoestima, necessatida muito de ajuda psicológica e fisícos por conta de dores na cabeça"
+                },
+                "itensNecessarios": {
+                  "example": "Remedios e Perucas"
+                },
+                "informacoesAdicionais": {
+                  "example": "Roupas"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -301,7 +392,7 @@
       },
       "delete": {
         "tags": [],
-        "description": "",
+        "description": "Remover cadastro de participantes, por favor insira o nome do cadastro que deseja excluir.",
         "parameters": [
           {
             "name": "nome",
